--- a/template.yaml
+++ b/template.yaml
@@ -21,6 +21,21 @@ Resources:
           Properties:
             Path: /stocking/orders
             Method: get
+  OrderUpdateFunction:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      CodeUri: orderUpdate/
+      Handler: app.lambda_handler
+      Runtime: python3.9
+      Policies: AmazonDynamoDBFullAccess
+      Architectures:
+        - x86_64
+      Events:
+        SignUp:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /stocking/orders/update
+            Method: put
 
 
 Outputs:
